fix alignment of green line letters in stop bubbles

--- a/apps/site/web/static/css/_stop-bubbles.scss
+++ b/apps/site/web/static/css/_stop-bubbles.scss
@@ -166,6 +166,7 @@ $location-line-width: $space-6;
 
   text {
     font-weight: bold;
+    transform: translate(-2px, 0);
   }
 
   .terminus-circle {
